<?xml version="1.0"?>
<package format="2">
  <name>odom_predictor</name>
  <version>0.0.0</version>
  <description>Predict future odom readings through IMU integration </description>

  <author email="ztaylor@ethz.ch">Zachary Taylor</author>

  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>



</package>
